# zephyr-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION  output.repl  prj.conf  release_notes.txt  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json  install_dev_tools.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.c  prj.conf  west.yml
app/actor/: actor.h
app/ble/: CMakeLists.txt  ble_concurrent_roles.c  ble_concurrent_roles.h  ble_interface.h  ble_peripheral_hr.c
app/ble_concurrent_roles/: CMakeLists.txt  ble_concurrent_roles.c  ble_concurrent_roles.h
app/ble_hr/: CMakeLists.txt  ble_hr.c  ble_hr.h
app/ble_peripheral_hr/: CMakeLists.txt  ble_interface.h  ble_peripheral_hr.c  ble_peripheral_hr.h
app/boards/arm/app_nucleo_l476rg/: Kconfig.board  Kconfig.defconfig  app_nucleo_l476rg.dts  app_nucleo_l476rg.yaml  board.cmake
app/boards/arm/app_nucleo_l476rg/support/: app_nucleo_l476rg.repl  app_nucleo_l476rg.resc
app/button/: CMakeLists.txt  button.c  button.h
app/cli/: CMakeLists.txt
app/event/: CMakeLists.txt  event.c  event.h
app/hsm/: CMakeLists.txt  hsm.h
app/led/: CMakeLists.txt  led.c  led.h
app/scripts/: west-commands.yml
app/scripts/west_commands/: app_version.py  emulate.py  st-clt.py  unit.py
app/supervisor/: CMakeLists.txt  _supervisor_states.h  fault_state.c  init_state.c  panic_state.c  root_state.c  supervise_state.c  supervisor.c  supervisor.h
app/tests/ble/: CMakeLists.txt  test_ble_concurrent_roles.c  test_ble_peripheral_hr.c  testcase.yaml
app/tests/ble_peripheral_hr/: CMakeLists.txt  prj.conf  test_ble_peripheral_hr.c  testcase.yaml
app/tests/robot/: some_tests.robot
app/tests/supervisor/: CMakeLists.txt  prj.conf  test_supervisor.c  testcase.yaml
tests/app/supervisor/: CMakeLists.txt  main.c  test_supervisor.c
